--- a/static/js/index.html
+++ b/static/js/index.html
@@ -20,38 +20,42 @@
 
 </head>
 <body class="h">
-<div class="cover-container mx-5 h-100" id = "hz">
-    <div class="card bg-dark h-100 text-white mx-5" id = "game_window">
-        <p>тщуштмавтиваоымммммммммммммммммм
-        ммылыьыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
-        ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
-        ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
-        ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
-        ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
-        ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
-        ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы</p>
+<div class="cover-container mx-5 h-100 justify-content-center" id = "hz">
+    <div class="card bg-dark h-100 text-white mx-5 " id = "game_window" style = "height:100%; width:100%;">
+        <center>
+            <p>тщуштмавтиваоымммммммммммммммммм
+                ммылыьыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
+                ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
+                ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
+                ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
+                ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
+                ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы
+                ыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыыы</p>
+        </center>
         <div id="area"></div>
         <p id="el"></p>
         <script src="app.js"></script>
         <script>
             function genMap(p){
             const gameWindow = document.getElementById('game_window');
-            const column = document.createElement('div');
-            column.className = 'row justify-content-center';
+            const table = document.createElement('table');
+            const tbody = document.createElement('tbody');
+            table.appendChild(tbody);
             for (let xCord=0; xCord<p; xCord++){
-                    const col = document.createElement('div');
-                    col.className = "col-1 mx-0 px-0";
+                    const tr = document.createElement('tr');
+                    
                 for (let yCord=0; yCord<p; yCord++){
 
-                    const button = document.createElement('button');
-                    button.className="btn btn-outline-light btn-sm px-0 mx-0 bg-primary play_cage";
-                    button.textContent = 'xnjnn';
-                    col.appendChild(button);
+                    const th = document.createElement('th');
+                    // button.className="btn btn-outline-light btn-sm-sm btn-lg-lg x px-0 mx-0 bg-primary play_cage";
+                    // button.style = "height:1rem;width:1rem";
+                    th.textContent = 'btn';
+                    tr.appendChild(th);
 
             }
-            column.appendChild(col);
+            tbody.appendChild(tr);
         }
-        gameWindow.appendChild(column);
+        gameWindow.appendChild(table);
 
     }
         </script>
