--- a/static/js/bb.html
+++ b/static/js/bb.html
@@ -1,33 +1,99 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>Выравнивание</title>
-  <style type="text/css">
-   TABLE {
-    width: 100%; /* Ширина таблицы */
-   }
-   #col1 {
-    width: 75%; /* Ширина первой колонки */
-    background: #f0f0f0; /* Цвет фона первой колонки */
-   }
-   #col2 {
-    width: 25%; /* Ширина второй колонки */
-    background: #fc5; /* Цвет фона второй колонки */
-    text-align: right; /* Выравнивание по правому краю */
-   }
-   #col1, #col2 {
-    vertical-align: top; /* Выравнивание по верхнему краю */
-    padding: 5px; /* Поля вокруг содержимого ячеек */
-   }
-  </style>
- </head>
- <body>
-  <table>
-   <tr>
-    <td id="col1">Колонка 1</td>
-    <td id="col2">Колонка 2</td>
-   </tr>
-  </table> 
- </body>
-</html>
+{% extends 'base_admin.html' %}
+
+{%block main_content%}
+
+<div class = "container-fluid">
+    <div class = "card bg-dark text-white">
+        <div class="card-body">
+<!--            {{ ship_form.errors }}-->
+<!--            <div class="container mt-5">-->
+<!--              <h2>Dropdown List with Accordion Items</h2>-->
+
+<!--              <div class="dropdown">-->
+<!--                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+<!--                  Select an Item-->
+<!--                </button>-->
+<!--                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">-->
+
+<!--                  &lt;!&ndash; Section 1 &ndash;&gt;-->
+<!--                  <div class="accordion" id="accordionExample">-->
+<!--                    {%for  prize in prizes%}-->
+<!--                    <div class="accordion-item">-->
+
+
+<!--                      <h2 class="accordion-header" id="headingOne">-->
+<!--                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#{{prize[0]}}" aria-expanded="true" aria-controls="{{prize[0]}}">-->
+<!--                          {{prize[0]}}-->
+<!--                        </button>-->
+<!--                      </h2>-->
+<!--                      <div id="{{prize[0]}}" class="accordion-collapse collapse show" aria-labelledby="heading{{prize[0]}}" data-bs-parent="#accordionExample">-->
+<!--                        <div class="accordion-body">-->
+<!--                            <div class = "prize_item">-->
+<!--                                <p >{{prize[1]}}</p>-->
+<!--                            </div>-->
+
+<!--                        </div>-->
+<!--                      </div>-->
+<!--                    </div>-->
+<!--                    {% endfor %}-->
+<!--&lt;!&ndash;              <div class="accordion-item">&ndash;&gt;-->
+<!--&lt;!&ndash;                <h2 class="accordion-header" id="headingTwo">&ndash;&gt;-->
+<!--&lt;!&ndash;                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">&ndash;&gt;-->
+<!--&lt;!&ndash;                    Accordion Item #2&ndash;&gt;-->
+<!--&lt;!&ndash;                  </button>&ndash;&gt;-->
+<!--&lt;!&ndash;                </h2>&ndash;&gt;-->
+<!--&lt;!&ndash;                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">&ndash;&gt;-->
+<!--&lt;!&ndash;                  <div class="accordion-body">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.&ndash;&gt;-->
+<!--&lt;!&ndash;                  </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;              </div>&ndash;&gt;-->
+<!--&lt;!&ndash;              <div class="accordion-item">&ndash;&gt;-->
+<!--&lt;!&ndash;                <h2 class="accordion-header" id="headingThree">&ndash;&gt;-->
+<!--&lt;!&ndash;                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">&ndash;&gt;-->
+<!--&lt;!&ndash;                    Accordion Item #3&ndash;&gt;-->
+<!--&lt;!&ndash;                  </button>&ndash;&gt;-->
+<!--&lt;!&ndash;                </h2>&ndash;&gt;-->
+<!--&lt;!&ndash;                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">&ndash;&gt;-->
+<!--&lt;!&ndash;                  <div class="accordion-body">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.&ndash;&gt;-->
+<!--&lt;!&ndash;                  </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;              </div>&ndash;&gt;-->
+<!--            </div>-->
+
+<!--                  &lt;!&ndash; Add more sections as needed &ndash;&gt;-->
+
+<!--                </div>-->
+<!--              </div>-->
+
+<!--            </div>-->
+
+            <form method="post">
+                {{ ship_form.hidden_tag() }}
+                {{ ship_form.x(max=(board.n - 1))}}
+                {{ ship_form.y(max=(board.n - 1))}}
+                {{ ship_form.prize() }}
+                {{ ship_form.submit()}}
+            </form>
+            <div>
+            <table class="table table-bordered border-light;">
+                <tbody>
+
+                {% for tr in board_render %}
+                <tr style="height: 1rem">
+                    {% for th in tr %}
+                    <th class="text-white p-0" style= "width: 1rem;">
+                        <button style="width: 100%; height: 100%;" value="{{y_position}}{{x_position}}">{{ th }}</button>
+                    </th>
+                    {% endfor %}
+                </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            </div>
+
+        </div>
+    </div>
+</div>
+{%endblock%}
